5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1832_3183.log
== TEST (2019-06-13 18:12:57) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet):
	vet[i]=vet[i]-1
	vet[i]=vet[i]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:13:49) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in vet:
	vet[i]=vet[i]-1
	vet[i]=vet[i]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:30) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in size(vet):
	vet[i]=vet[i]-1
	vet[i]=vet[i]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:29) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet,0,-1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:26:14) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet,1,-1):
	print()
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:26:22) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet,1,-1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:26:41) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,1,-1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:19) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,0,-1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:40) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,0,-1):
print(i)
	

-- ERROR:
File "XXXX", line 4
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:57) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,0,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:28:25) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,vet-1,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:29:19) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (0,vet+1,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:29:43) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,1,0):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:30:01) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,1,0):
   print(vet)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:30:27) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,2,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:23) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet+1,1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:41) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet-1,1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:53) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:32:22) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:32:46) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (-1, vet):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:37) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,0,vet+1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:30) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet,0,vet-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:17:11) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (2,vet+1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:17:42) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (vet-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:08) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (0,1,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:52) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet,0,-1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:35) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(1,vet+1):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:20:17) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(1,vet+1,0):
   print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:47) 
-- CODE:
from numpy import*
vet=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(vet,0,-1):
   print(i)
for i in range(vet,vet+1,0):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:22) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(v,0,-1):
   print(i)
for i in range(v,v+1,0):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:29) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(v,0,-1):
   print(i)
for i in range(v,v+1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:49) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (v,0,-1):
   print(i)
for i in (v,v+1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:23:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(v,0,-1):
   print(i)
for i in range(v,v+1):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:24:00) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(v,0,-1):
   print(v)
for i in range(v,v+1):
	print(v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:24:19) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in (v,0,-1):
   print(v)
for i in (v,v+1):
	print(v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:26:32) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(-1,0,v):
   print(i)
for i in range(1,0,v):
	print(i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:54) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(3,0,v):
   print(i)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:29:12) 
-- CODE:
from numpy import*
v=array(eval(input("digite vetor de numeros inteiros: ")))
for i in range(3,0,v):
   print(i)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
